# nodekit-android

./: .gitignore  NOTICE  README.md  build.gradle  settings.gradle
app/: build.gradle  proguard-rules.pro
app/src/main/: AndroidManifest.xml
app/src/main/assets/: app.nkar
app/src/main/assets/app/: index.html  index.js
app/src/main/res/layout/: web_container.xml
app/src/main/res/values/: strings.xml
apptest/: build.gradle
apptest/src/main/: AndroidManifest.xml
apptest/src/main/res/layout/: content_main.xml
apptest/src/main/res/menu/: menu_main.xml
apptest/src/main/res/values/: strings.xml
engine-common/: build.gradle
engine-common/src/main/: AndroidManifest.xml
engine-common/src/main/res/values/: strings.xml
engine-jsc/: build.gradle
engine-jsc/src/main/: AndroidManifest.xml
engine-jsc/src/main/cpp/: CMakeLists.txt  JSContext.cpp  JSFunction.cpp  JSFunction.h  JSInstance.cpp  JSInstance.h  JSObject.cpp  JSString.cpp  JSUtils.h  JSValue.cpp  native-lib.cpp
engine-jsc/src/main/cpp_patch/JavaScriptCore/: JSStringRefCF.h
engine-jsc/src/main/res/values/: strings.xml
gradle/wrapper/: gradle-wrapper.properties
nkcore/: build.gradle
nkcore/src/main/: AndroidManifest.xml
nkcore/src/main/assets/lib-core/: _nodekit_bootstrapper.js  _nodekit_third_party_main.js
nkelectro/: build.gradle
nkelectro/src/main/: AndroidManifest.xml
nkscripting/: build.gradle
nkscripting/src/main/: AndroidManifest.xml
nkscriptingbridges/src/main/: AndroidManifest.xml
nkscriptingchannel/: build.gradle
nkscriptingchannel/src/main/: AndroidManifest.xml
(+150 files in other folders)
